src/PJ/POCO/TEST/NEG/NAMPER02.POC
/* Tests for some wierdly placed ampersands */
#pragma poco echo "expect>& isn't a member of struct foobar"

struct foobar
	{
	int foo;
	char bar;
	} fb;

main()
{
int *pt;

pt = fb.&foo;
puts("This shouldn't compile");
}
